# qfuse

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.csv
cfg/: config.csv
src/: dirtree.h  fuse.cpp  fuse.hpp  log.h  log.hpp  main.cpp  model.cpp  model.hpp  qfuse.c  qfuse.h
test/: build.q
test/hdb/: par.txt  sym_bar  sym_baz  sym_foo
test/hdb/baz/: .d  a  h#  i
test/segments/par_1/2025.07.09/bar/: a  b#  c
test/segments/par_1/2025.07.09/foo/: .d  a  f#  g
test/segments/par_1/2025.07.12/foo/: a  f#  g
test/segments/par_1/2025.07.15/foo/: a  f#  g
test/segments/par_1/2025.07.18/bar/: a  b#  c
test/segments/par_1/2025.07.18/foo/: a  f#  g
test/segments/par_1/2025.07.24/foo/: a  f#  g
test/segments/par_1/2025.07.27/bar/: a  b  b#  c
test/segments/par_1/2025.07.30/bar/: a  b#  c
test/segments/par_1/2025.07.30/foo/: a  f#  g
test/segments/par_1/2025.08.05/bar/: a  b#  c
test/segments/par_1/2025.08.17/bar/: a  b#  c
test/segments/par_1/2025.08.20/bar/: a  b#  c
test/segments/par_1/2025.08.23/bar/: a  b#  c
test/segments/par_2/2025.07.10/bar/: a  b#  c
test/segments/par_2/2025.07.16/bar/: a  b#  c
test/segments/par_2/2025.07.19/foo/: a  f#  g
test/segments/par_2/2025.07.22/bar/: a  b#  c
test/segments/par_2/2025.07.22/foo/: a  f#  g
test/segments/par_2/2025.07.28/bar/: a  b#  c
test/segments/par_2/2025.08.03/bar/: a  b#  c
test/segments/par_2/2025.08.03/foo/: a  f#  g
test/segments/par_2/2025.08.06/foo/: a  f#  g
test/segments/par_2/2025.08.12/foo/: a  f#  g
test/segments/par_2/2025.08.15/foo/: a  f#  g
test/segments/par_2/2025.08.21/bar/: a  b#  c
test/segments/par_2/2025.08.21/foo/: a  f#  g
test/segments/par_2/2025.08.30/bar/: a  b#  c
test/segments/par_2/2025.09.02/bar/: a  b#  c
test/segments/par_3/2025.07.14/foo/: a  f#  g
test/segments/par_3/2025.07.17/foo/: a  f#  g
test/segments/par_3/2025.07.20/foo/: a  f#  g
(+30 files in other folders)
